--- a/MyShopMVC/MyShopMVC.DataAccess.InMemory/MyShopMVC.DataAccess.InMemory.csproj
+++ b/MyShopMVC/MyShopMVC.DataAccess.InMemory/MyShopMVC.DataAccess.InMemory.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProductRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyShopMVC.Core\MyShopMVC.Core.csproj">
+      <Project>{c9d69373-9c17-4fa9-8209-5109d859a806}</Project>
+      <Name>MyShopMVC.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
